# deep-paper-reader

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
.sprint10/: bg_ingest_log.md  checkpoint.json  session-log.md
configs/: feedback_thresholds.yaml  model_registry.yaml  pipeline_config.yaml
db/migrations/: 0001_init.sql  0002_paper_type_notion.sql
docs/: feedback-protocol.md  model-comparison.md  prompt-templates.md  roadmap.md  schemas.md
docs/sprint10/: E2E_SMOKE_REPORT.md  MISSION.md  START_PROMPT.md
scripts/: push_to_github.sh  sprint10-env-check.sh  sprint10_bulk_ingest.py  sprint10_notion_ingest.py
src/: api_server.py  cli.py  config.py  db.py  embed_backend.py  ingest.py  llm_backend.py  models.py  parser.py  pipeline.py  text_ingest.py  vlm_backend.py  zotero_client.py
src/embeddings/: multi_level.py
src/feedback_loop/: review_agent.py  web_ui.py
src/stage1_skeleton/: parser.py
src/stage2_argument/: extractor.py
src/stage3_figure/: interpreter.py
src/stage4_discussion/: analyzer.py
tests/: test_corpus.md  test_sprint10.py
